[package]
name = "promerge"
version = "0.1.1"
edition = "2021"
authors = ["Milad (Mike) Taghavi <mitghi.at.gmail.com>"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore"]
repository = "https://github.com/mitghi/promerge"
documentation = "https://github.com/mitghi/promerge"
homepage = "https://github.com/mitghi/promerge"
description = ""
keywords = ["prometheus", "prometheus-metrics", "merge-prometheus", "grafana"]
categories = ["algorithms", "encoding", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.102"
pest = "2.7.0"
pest_derive = "2.7.0"
serde = { version = "1.0.171", features = ["derive"] }
